# Uxor

./: .gitignore  .pylintrc  LICENSE  __init__.py  configs.py  mypy.ini  o_ucsur.py  pyproject.toml  readme.md  uxor.py
macros/LibreOffice/: o_ucsur.bas
src/: __init__.py  configs.py  data_classes.py  main.py  setup_helpers.py  uxor.py
src/Uxor/: __init__.py  main.py  prefabs.py
src/Uxor/Scripts/: cli.py  make_config.py
src/Uxor/Scripts/_lo_extension_ingredients/UxorLibrary/: dialog.xlb  script.xlb
src/Uxor/configs/: __init__.py  pankantan.py  standard.py
src/lo_extension_packager/: main.py
src/lo_extension_packager/_ingredients/UxorLibrary/: Module1.xba
src/lo_extension_packager/_ingredients/registration/: license.txt
src/macros/LibreOffice/: o_ucsur.bas  o_ucsur.py  setup.cmd
src/macros/LibreOffice/templates/: o_ucsur.py  o_ucsur.xba
src/scripts/: cli.py  setup_libreoffice_macro.py
src/scripts/_lo_extension_ingredients/: description.xml
src/scripts/_lo_extension_ingredients/pkg-description/: pkg-description.en
tests/: test_main.py  test_prefab_pankantan.py
